[package]
name = "dynui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc = { path = "proc" }
into_string = "1.0.3"
js-sys = "0.3.60"
wasm-bindgen = { version = "0.2.83" }
web-sys = { version = "0.3.60", features = ["console", "Window", "Document", "DocumentFragment", "HtmlElement", "Text", "EventTarget"] }
console_error_panic_hook = { version = "0.1.6" }
cfg-if = "1.0.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[build-dependencies]
futures = "0.3.25"
proc-macro2 = "1.0.47"
quote = "1.0.21"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.13.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }

[workspace]
members = ["proc"]
